# FacadeBot_control

./: .gitignore  CLAUDE.md  LAUNCH.md  README.md
esp32_firmware/: main.py
ros2_ws/src/esp32_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/esp32_bridge/esp32_bridge/: esp32_bridge_node.py  transport.py
ros2_ws/src/facade_control/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/facade_control/facade_control/: facade_control_node.py  kinematics.py  trajectory_node.py
ros2_ws/src/facade_control/test/: test_kinematics.py  test_trajectory_node.py
ros2_ws/src/facade_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/facade_msgs/action/: FollowTrajectory.action
ros2_ws/src/facade_msgs/msg/: Waypoint.msg
ros2_ws/src/facade_msgs/srv/: MoveToPose.srv  ReadJointPositions.srv  ReadToolPose.srv
ros2_ws/src/facadebot_description/: CMakeLists.txt  package.xml
ros2_ws/src/facadebot_description/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
ros2_ws/src/facadebot_description/urdf/: URDF_Test.csv  URDF_Test.urdf
scripts/: test_home_position.py  test_trajectory.py
